--- a/prima_app/templates/index.html
+++ b/prima_app/templates/index.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends "base.html" %} 
+
+{%block title%} {{block.super}} Index {%endblock title%}
+
+{%block content%}
     <ol>
-        <li><a href="{% url 'prima_app:homepage'%}">Home page benvenuto</a></li>
+        <li><a href="{% url 'prima_app:homepage'%}">Home page di benvenuto</a></li>
         <li><a href="{% url 'prima_app:welcome'%}">Welcome</a></li>
         <li><a href="{% url 'prima_app:lista'%}">Lista</a></li>
         <li><a href="{% url 'prima_app:chi_siamo'%}">Chi siamo</a></li>
         <li><a href="{% url 'prima_app:variabili'%}">Variabili</a></li>
     </ol>
-</body>
-</html>
+{%endblock content%}
