--- a/templates/base.html
+++ b/templates/base.html
@@ -84,15 +84,29 @@
                 </div>
               </li>
 
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Eventi
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="{% url 'eventi:Index_evento'%}">Index</a>
+                  <a class="dropdown-item" href="{% url 'eventi:query_a'%}">query a</a>
+                  <a class="dropdown-item" href="{% url 'eventi:query_b'%}">query b</a>
+                  <a class="dropdown-item" href="{% url 'eventi:query_c'%}">query c</a>
+                  <a class="dropdown-item" href="{% url 'eventi:query_d'%}">query d</a>
+                  <a class="dropdown-item" href="{% url 'eventi:query_e'%}">query e</a>
+                  <a class="dropdown-item" href="{% url 'eventi:query_f'%}">query f</a>
+
+                </div>
+              </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Cerca</button>
           </form>
         </div>
+
+      <li></li>
     </nav>
     <div class="container my-4">
         {%block content%}
